# iran-localization

./: README.md
csv/: localization_public_county.csv  localization_public_province.csv  localization_public_region.csv  localization_public_village.csv
excel/: localization_public_county.xlsx  localization_public_little_village.xlsx  localization_public_province.xlsx  localization_public_region.xlsx  localization_public_village.xlsx
html/: localization_public_county.html  localization_public_province.html  localization_public_region.html  localization_public_village.html
json/: localization_public_county.json  localization_public_province.json  localization_public_region.json  localization_public_village.json
manipulate/: docker-compose.yml  main.py  model.py  pyproject.toml  repository.py
manipulate/data/: .~lock.GEO99.xlsx#
manipulate/ddl/public/: county.sql  little_village.sql  province.sql  region.sql  village.sql
md/: localization_public_county.md  localization_public_province.md  localization_public_region.md  localization_public_village.md
sql/: localization_public_county.sql  localization_public_province.sql  localization_public_region.sql  localization_public_village.sql
xml/: localization_public_county.xml  localization_public_province.xml  localization_public_region.xml  localization_public_village.xml
