[tool.poetry]
name = "manipulate"
version = "0.1.0"
description = ""
authors = ["Mojtaba (Ramun) Sharif <jramun7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.36"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
